Fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html{
     font-size: 16px;
     box-sizing: inherit;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 a{
     margin-top: .25rem;
